--- a/intel/css/main.css
+++ b/intel/css/main.css
@@ -1,1 +1,8 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+/* Шрифты */
+@import "./fonts.css";
+
+/* Десктоп стили */
+@import "./style.css";
+
+/* Мобильные стили */
+@import "./media.css";
