--- a/intel/sass/media.sass
+++ b/intel/sass/media.sass
@@ -7,6 +7,18 @@
     .logo
         margin-left: 115px
     
+    .tests
+        .deco
+            right: 80px
+
+    .horizons
+        .deco
+            display: none
+
+    .products
+        .deco
+            display: none
+
     .nav
         margin-left: 50px
 
@@ -14,6 +26,12 @@
     .banner
         .deco
             display: none
+
+    .footer
+        .deco
+            &:nth-child(1)
+                left: 50px
+            &:nth-child(2)
 
     .about
         .deco
@@ -26,6 +44,12 @@
             grid-template-columns: repeat(1, 1fr)
             justify-items: center
             grid-row-gap: 70px
+        .deco
+            right: 15px
+
+    .articles
+        .deco
+            display: none
 
     .test
         max-width: 700px
@@ -62,6 +86,10 @@
         &__body
             padding: 30px
 
+    .tests
+        .deco
+            display: none
+
     .about
         &__wrap
             grid-column-gap: 40px
@@ -81,18 +109,12 @@
     .footer
         padding: 40px 0px
         .deco
-            height: 75px
-            width: 75px
-            &__small
-                height: 30px
-                width: 30px
-            &__big
-                height: 45px
-                width: 45px
             &:nth-child(1)
-                left: 60px
+                left: 20px
+                bottom: -40px
             &:nth-child(2)
-                right: 40px
+                top: -40px
+                right: 20px
 
 @media screen and ( max-width: 940px )
     .header
@@ -209,6 +231,21 @@
         grid-template-columns: repeat(1, 1fr)
         justify-items: center
         grid-row-gap: 60px
+
+    .footer
+        .deco
+            &:nth-child(1)
+                display: none
+            &:nth-child(2)
+                height: 75px
+                width: 75px
+                .deco
+                    &__small
+                        height: 30px
+                        width: 30px
+                    &__big
+                        height: 45px
+                        width: 45px
 
 @media screen and ( max-width: 400px )
     .button
