--- a/intel/sass/style.sass
+++ b/intel/sass/style.sass
@@ -111,13 +111,16 @@ section
     padding: 0px 15px
 
 .three-col__container
-    transform: translateY(-60px)
+    padding-top: 100px
+    transform: translateY(-160px)
     display: grid
     grid-template-columns: repeat(3, 1fr)
     grid-column-gap: 60px
     width: 100%
     position: relative
     z-index: 2
+    & + .section__center
+        margin-top: -100px
 
 .deco
     display: flex
@@ -177,10 +180,12 @@ section
         .logo
             padding-left: 35px
     &.scrolled
-        .header 
+        .header
+            &__intel
+                padding: 10px 18px 10px 26px
             &__wrap
                 transition-duration: .3s
-                padding: 5px 0px
+                padding: 12px 0px
 
 .nav
     max-width: 745px
@@ -408,7 +413,6 @@ section
             position: absolute
             width: auto
             top: 50%
-            transform: translateY(-50%)
     &__title
         font-weight: 500
         font-size: 21px
@@ -429,6 +433,16 @@ section
         height: 1px
         background-color: #d7d7d7
         margin-top: auto
+    &:nth-child(1)
+        .test
+            &__img img
+                transform: translate(-22px, -49.5%)
+                max-width: 600px
+    &:nth-child(2)
+        .test
+            &__img img
+                transform: translate(7px, -47.4%)
+                max-width: 550px
     .button
         padding: 5px 52px 5px 35px
         margin-top: 40px
