--- a/intel/sass/media.sass
+++ b/intel/sass/media.sass
@@ -70,6 +70,11 @@
                 object-fit: contain
         &__line
             margin-top: 30px
+        &:nth-child(2)
+            .test
+                &__img img
+                    position: relative
+                    bottom: auto
 
 @media screen and ( max-width: 1100px )
     .header
