--- a/ny/sass/media.sass
+++ b/ny/sass/media.sass
@@ -80,13 +80,25 @@
             font-size: 32px
             line-height: 45px
 
+    .container
+        min-height: auto
+
+    .text-page__content
+        margin-top: 40px
+
     .main
-        min-height: 100vh
+        min-height: auto
         height: auto
         .swiper-wrapper
-            flex-direction: column
+            height: auto
+        .swiper-slide
+            height: 100%
+            min-height: auto
+            padding: 0px 0px 80px 0px
 
     .quiz
+        &__container
+            margin-top: 40px
         &__checkbox
             height: 30px
             width: 30px
@@ -109,11 +121,21 @@
             flex-direction: column
 
     .contacts
+        padding-bottom: 120px !important
+        &__wrap
+            margin-top: 40px
         &__items
             flex-direction: column
         &__item + &__item
             margin-left: 0
             margin-top: 30px
+        &__footer
+            width: 94%
+            bottom: -100px
+            flex-direction: column
+            align-items: center
+            * + *
+                margin-top: 10px
 
     .buttons-row
         flex-direction: column
@@ -153,8 +175,6 @@
                 margin-bottom: 0
 
     .contacts
-        &__wrap
-            margin-top: 140px
         .button
             max-width: none
 
