--- a/ny/sass/style.sass
+++ b/ny/sass/style.sass
@@ -182,7 +182,8 @@ p.text_light
 
 .main
     flex-grow: 1
-    height: 100vh
+    width: 100%
+    min-height: 100vh
     overflow: hidden
     position: relative
     &__pagination
@@ -198,10 +199,13 @@ p.text_light
         transform: translate(calc( 854px - 100% ), 0)
         z-index: 3
     .swiper-slide
-        overflow: hidden
-        // height: 100vh !important
+        min-height: 100vh
+        display: flex
+        flex-direction: column
+        overflow-y: auto
     .swiper-wrapper
         z-index: 2
+        height: 100vh
     .swiper-pagination
         display: flex
         flex-direction: column
