--- a/ny/sass/fonts.sass
+++ b/ny/sass/fonts.sass
@@ -2,6 +2,8 @@
 @font-face
     font-family: "Montserrat"
     src: url(../fonts/Montserrat-Thin.ttf) format("truetype")
+    src: url(../fonts/Montserrat-Thin.woff) format("woff")
+    src: url(../fonts/Montserrat-Thin.woff2) format("woff2")
     font-display: swap
     font-weight: 100
     font-style: normal
@@ -9,6 +11,8 @@
 @font-face
     font-family: "Montserrat"
     src: url(../fonts/Montserrat-Light.ttf) format("truetype")
+    src: url(../fonts/Montserrat-Light.woff) format("woff")
+    src: url(../fonts/Montserrat-Light.woff2) format("woff2")
     font-display: swap
     font-weight: 300
     font-style: normal
@@ -16,6 +20,8 @@
 @font-face
     font-family: "Montserrat"
     src: url(../fonts/Montserrat-Bold.ttf) format("truetype")
+    src: url(../fonts/Montserrat-Bold.woff) format("woff")
+    src: url(../fonts/Montserrat-Bold.woff2) format("woff2")
     font-display: swap
     font-weight: 700
     font-style: normal
