--- a/ny/sass/media.sass
+++ b/ny/sass/media.sass
@@ -95,6 +95,11 @@
             line-height: 44px !important
             font-size: 42px !important
 
+    .header
+        background-color: rgba(0, 0, 0, .9)
+        &__wrap
+            padding: 10px 0px
+
     .section
         &__title
             font-size: 32px
@@ -120,6 +125,11 @@
         &__checkbox
             height: 30px
             width: 30px
+        &__buttons
+            flex-direction: column-reverse
+            .button + .button
+                margin-left: 0
+                margin-bottom: 30px
         &__text
             margin-left: 20px
             &-input
