--- a/ny/sass/style.sass
+++ b/ny/sass/style.sass
@@ -200,6 +200,7 @@ p.text_light
     .swiper-slide
         overflow: hidden
         // height: 100vh !important
+        height: 100% !important
     .swiper-wrapper
         z-index: 2
     .swiper-pagination
