--- a/ny/sass/style.sass
+++ b/ny/sass/style.sass
@@ -59,7 +59,7 @@ p.text_light
     &__title
         font-weight: bold
         font-size: 37px
-        letter-spacing: 0.27px
+        letter-spacing: 1px
         color: #fff
         line-height: 55px
     &__bg
@@ -130,7 +130,7 @@ p.text_light
     left: 0
     width: 100%
     &__wrap
-        padding-top: 53px
+        padding-top: 44px
         display: flex
         align-items: center
         justify-content: space-between
@@ -216,9 +216,9 @@ p.text_light
 
 .hero
     &__content
-        margin-top: 257px
+        margin-top: 310px
     &__list
-        margin-top: 160px
+        margin-top: 170px
         display: inline-block
         list-style-type: none
     &__item
@@ -232,7 +232,7 @@ p.text_light
             color: #990000
             display: inline-block
         & + &
-            margin-top: 16px
+            margin-top: 20px
         span
             display: inline-block
             margin-left: 36px
@@ -246,17 +246,18 @@ p.text_light
 .text-page
     &__content
         max-width: 1110px
-        margin-top: 260px
+        margin-top: 245px
         p.text_light + p.text_light
-            margin-top: 31px
+            margin-top: 35px
         p.text
             &_light
                 font-size: 23px
                 line-height: 31px
+                letter-spacing: 0.4px
                 &:first-of-type
                     margin-top: 35px
     .buttons-row
-        margin-top: 65px
+        margin-top: 70px
 
 .quiz
     &__container
@@ -275,7 +276,7 @@ p.text_light
         margin-bottom: 4px
         letter-spacing: 0px
     &__body
-        margin-top: 40px
+        margin-top: 55px
     &__title
         font-weight: 700
         letter-spacing: 0.27px
@@ -286,6 +287,8 @@ p.text_light
         display: none
         &.active
             display: block
+    &__option + &__option
+        margin-top: 55px
     &__option
         display: flex
         align-items: center
@@ -357,7 +360,7 @@ p.text_light
     .container
         height: 100%
     &__wrap
-        margin-top: 230px
+        margin-top: 245px
         width: 100%
         display: flex
         justify-content: space-between
