--- a/ny/sass/style.sass
+++ b/ny/sass/style.sass
@@ -375,6 +375,8 @@ p.text_light
             &, & *
                 line-height: 30px
                 color: #fff
+    &__item 
+        margin-top: 15px
     &__items
         display: flex
         flex-direction: column
@@ -524,3 +526,7 @@ p.text_light
         display: inline-block
         max-width: 380px
         margin-left: 100px
+        text-decoration: none
+        cursor: pointer
+        &:hover
+            text-decoration: underline
