--- a/ny/sass/media.sass
+++ b/ny/sass/media.sass
@@ -1,3 +1,67 @@
+@media screen and ( max-width: 1700px )
+    .main
+        &__pagination
+            left: 100%
+            transform: translate( -100%, 0)
+
+    .contacts
+        &__footer
+            width: 98%
+
+@media screen and ( max-height: 1000px )
+    .hero
+        &__content
+            margin-top: 250px
+        &__list
+            margin-top: 130px
+
+    .quiz
+        &__container
+            margin-top: 170px
+        &__body
+            margin-top: 35px
+        &__option + &__option
+            margin-top: 40px
+        &__option
+            margin-top: 40px
+        &__buttons
+            margin-top: 40px
+
+    .text-page
+        &__content
+            margin-top: 190px
+            p.text_light:first-of-type
+                margin-top: 30px
+            p.text_light + p.text_light
+                margin-top: 25px
+        .buttons-row
+            margin-top: 40px
+
+    .contacts
+        &__wrap
+            margin-top: 215px
+        &__items
+            max-height: 320px
+        &__map
+            iframe
+                height: 500px
+
+@media screen and ( max-height: 800px )
+    .hero
+        &__content
+            margin-top: 210px
+        &__list
+            margin-top: 80px
+    .contacts
+        &__wrap
+            margin-top: 215px
+            .button
+                margin-top: 20px
+        &__map
+            iframe
+                height: 450px
+                width: 700px
+
 @media screen and ( max-width: 1370px )
     .contacts
         &__wrap
@@ -29,6 +93,8 @@
             margin-left: 0
             margin-top: 40px
             max-width: none
+            iframe
+                width: 100%
 
 @media screen and ( max-width: 1100px )
 
