--- a/ny/sass/style.sass
+++ b/ny/sass/style.sass
@@ -59,7 +59,7 @@ p.text_light
     &__title
         font-weight: bold
         font-size: 37px
-        letter-spacing: 0.27px
+        letter-spacing: 1px
         color: #fff
         line-height: 55px
     &__bg
@@ -130,7 +130,7 @@ p.text_light
     left: 0
     width: 100%
     &__wrap
-        padding-top: 53px
+        padding-top: 44px
         display: flex
         align-items: center
         justify-content: space-between
@@ -182,8 +182,7 @@ p.text_light
 
 .main
     flex-grow: 1
-    width: 100%
-    min-height: 100vh
+    height: 100vh
     overflow: hidden
     position: relative
     &__pagination
@@ -199,13 +198,11 @@ p.text_light
         transform: translate(calc( 854px - 100% ), 0)
         z-index: 3
     .swiper-slide
-        min-height: 100vh
-        display: flex
-        flex-direction: column
-        overflow-y: auto
+        overflow: hidden
+        // height: 100vh !important
+        height: 100% !important
     .swiper-wrapper
         z-index: 2
-        height: 100vh
     .swiper-pagination
         display: flex
         flex-direction: column
@@ -219,9 +216,9 @@ p.text_light
 
 .hero
     &__content
-        margin-top: 257px
+        margin-top: 310px
     &__list
-        margin-top: 160px
+        margin-top: 170px
         display: inline-block
         list-style-type: none
     &__item
@@ -235,7 +232,7 @@ p.text_light
             color: #990000
             display: inline-block
         & + &
-            margin-top: 16px
+            margin-top: 20px
         span
             display: inline-block
             margin-left: 36px
@@ -249,17 +246,18 @@ p.text_light
 .text-page
     &__content
         max-width: 1110px
-        margin-top: 260px
+        margin-top: 245px
         p.text_light + p.text_light
-            margin-top: 31px
+            margin-top: 35px
         p.text
             &_light
                 font-size: 23px
                 line-height: 31px
+                letter-spacing: 0.4px
                 &:first-of-type
                     margin-top: 35px
     .buttons-row
-        margin-top: 65px
+        margin-top: 70px
 
 .quiz
     &__container
@@ -278,7 +276,7 @@ p.text_light
         margin-bottom: 4px
         letter-spacing: 0px
     &__body
-        margin-top: 40px
+        margin-top: 55px
     &__title
         font-weight: 700
         letter-spacing: 0.27px
@@ -289,6 +287,8 @@ p.text_light
         display: none
         &.active
             display: block
+    &__option + &__option
+        margin-top: 55px
     &__option
         display: flex
         align-items: center
@@ -360,7 +360,7 @@ p.text_light
     .container
         height: 100%
     &__wrap
-        margin-top: 230px
+        margin-top: 245px
         width: 100%
         display: flex
         justify-content: space-between
@@ -375,6 +375,8 @@ p.text_light
             &, & *
                 line-height: 30px
                 color: #fff
+    &__item 
+        margin-top: 15px
     &__items
         display: flex
         flex-direction: column
@@ -411,7 +413,40 @@ p.text_light
     pointer-events: none
     overflow-y: auto
     padding: 15px 0px
+    &__close
+        position: absolute
+        display: inline-block
+        width: 50px
+        height: 50px
+        background-color: transparent
+        cursor: pointer
+        top: 0
+        right: 0
+        transform: translate(100%, -100%)
+        &::after, &::before
+            display: inline-block
+            position: absolute
+            top: 50%
+            left: 50%
+            width: 30px
+            height: 1px
+            background-color: #000
+            content: ''
+        &::before
+            transform: translate(-50%, 0px) rotate(-45deg)
+        &::after
+            transform: translate(-50%, 0px) rotate(45deg)
+        &:hover
+            &::after, &::before
+                width: 35px
+            &::before 
+                transform: translate(calc( -50% - 1px ), 0px) rotate(-45deg)
+            &::after
+                transform: translate(calc( -50% - 1px ), 0px) rotate(45deg)
+        &:focus
+            outline: none
     &__body
+        position: relative
         max-width: 985px
         width: 100%
         margin: 150px auto 0
@@ -447,6 +482,7 @@ p.text_light
         margin-bottom: 70px
     &__col
         flex-basis: 44%
+        flex-shrink: 1
         & + &
             margin-left: 115px
     &__row
@@ -490,3 +526,7 @@ p.text_light
         display: inline-block
         max-width: 380px
         margin-left: 100px
+        text-decoration: none
+        cursor: pointer
+        &:hover
+            text-decoration: underline
