--- a/ny/sass/style.sass
+++ b/ny/sass/style.sass
@@ -375,7 +375,7 @@ p.text_light
             &, & *
                 line-height: 30px
                 color: #fff
-    &__item 
+    &__item + &__item 
         margin-top: 15px
     &__items
         display: flex
